feat(WIT-13)-registration (#21)
* Created endpoint, middleware, controller, service, exception

* type hinting

* fix(WIT-13)-fixed type hinting and Exception class

* feat(WIT-13)-added email verification

* feat(WIT-13): added repositories

* feat(WIT-13): added swagger annotations

* fix(WIT-13): fix UserRepository

* feat(WIT-13): fix types in UserRepository

* fix(WIT-13): fix BaseRepository

* fix(WIT-13): fix registration process

* fix(WIT-13): fix repositories and UserController

* refactor(WIT-13): ran csfix

* feat(WIT-13): changed usage of exceptions

* fix(WIT-13): changed BaseRepository

* fix(WIT-13): changed if statement

* feat(WIT-13): added "login" route and changed "signup" route

* feat(WIT-13): added tests for registration feature

* refactor(WIT-13): ran csfix

* fix(WIT-13): add annotations for phpstan

* refactor(WIT-13): refactor try-catch block

* fix(WIT-13): change registration method from save() to create()

* fix(WIT-13): change try-catch to exception

* refactor(WIT-13): change name from RegistrarService to UserRegisterService

* fix(WIT-13): change repository architecture

* refactor(WIT-13): refactor

* feat(WIT-13): changes due to review

* fix(WIT-13): fix Repository

* refactor(WIT-13): changed place where user model is created

* feat(WIT-13): created custom exceptions

* fix(WIT-13): fixed missing appeal

* refactor(WIT-13): fixed typo

* feat(WIT-13): changed return types, used exceptions

* fix(WIT-13): fixed expected status
